# AgentPilot

./: AUTOTEST_AGENT_MVP_AGENT_PROMPT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
db/: schema.sql
docs/: module_progress.md  tool_protocol.md
docs/modules/: README.md  frontend.md  observability.md  orchestration.md  quality.md  reporting.md  roadmap_alignment.md  security.md  storage.md  task_management.md
src/: main.rs
tests/fixtures/: report_markdown_baseline.json
web/: index.html  report.html  task.html
