[package]
name = "autotest-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
futures-util = "0.3"

[dev-dependencies]
